[package]
name         = "mako-redispatch"
version.workspace     = true
description  = "Redispatch 2.0 process engine for German grid congestion management (§§ 13, 13a, 14 EnWG)"
authors.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
keywords     = ["redispatch", "energy", "mako", "bdew", "congestion"]
categories   = ["data-structures"]

[dependencies]
mako-engine      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
time             = { workspace = true }
uuid             = { workspace = true }

[dev-dependencies]
# redispatch-xml is only needed for integration tests (parse → route pipeline).
redispatch-xml   = { path = "../redispatch-xml" }

[features]
testing = ["mako-engine/testing"]
tracing = ["mako-engine/tracing"]
