[package]
name         = "mako-redispatch"
version.workspace     = true
description  = "Redispatch 2.0 process engine for German grid congestion management (§§ 13, 13a, 14 EnWG)"
authors.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
keywords     = ["redispatch", "energy", "mako", "bdew", "congestion"]
categories   = ["data-structures"]

# Format-agnostic by design (like mako-gpke/mako-wim/mako-mabis): the engine
# never depends on a format crate. The XML half (`redispatch-xml`) and the
# DocumentType → RedispatchDocumentKind mapping live at the transport
# boundary in makod, which depends on both crates.

[dependencies]
mako-engine      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
time             = { workspace = true }
uuid             = { workspace = true }

[features]
testing = ["mako-engine/testing"]
tracing = ["mako-engine/tracing"]
