[package]
name         = "mako-wim-gas"
version.workspace     = true
description  = "WiM Gas process engine for German gas metering-point operator change processes (Wechselprozesse im Messwesen Gas)"
authors.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
keywords     = ["wim-gas", "gas", "messwesen", "mako", "bdew"]
categories   = ["data-structures"]

[dependencies]
mako-engine = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
time        = { workspace = true }

[dev-dependencies]
anyhow      = { workspace = true }
edi-energy  = { path = "../edi-energy", features = ["utilmd", "aperak"] }
mako-engine = { workspace = true, features = ["testing"] }
serde_json  = { workspace = true }
time        = { workspace = true }
tokio       = { version = "1", features = ["full"] }
