[package]
name         = "mako-wim"
version.workspace     = true
description  = "WiM process engine for German smart-meter market communication (Wechsel des Messstellenbetreibers)"
authors.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
keywords     = ["wim", "edifact", "energy", "mako", "bdew"]
categories   = ["data-structures"]

[dependencies]
mako-engine = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
time        = { workspace = true }

[dev-dependencies]
anyhow      = { workspace = true }
# edi-energy is only needed for integration tests.
# Production code uses only mako-engine's ProfileRequirement for startup checks.
edi-energy  = { workspace = true, features = ["utilmd", "aperak"] }
# testing feature enables InMemoryXxx stores and EngineBuilder::new().
mako-engine = { workspace = true, features = ["testing"] }
serde_json  = { workspace = true }
time        = { workspace = true }
tokio       = { version = "1", features = ["full"] }

[[example]]
name               = "wim_geraetewechsel"
required-features  = ["mako-engine/testing"]
