[package]
name             = "netz-checker"
version.workspace = true
description      = "Pure Anmeldung validation library for German energy market NB STP decisions"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords         = ["energy", "mako", "bdew", "netz", "anmeldung"]
categories       = ["data-structures"]

[features]
## Enable in-memory test doubles (`InMemoryPartnerDir`).
## Must never appear in production builds.
testing = []

[dependencies]
mako-markt = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
time         = { workspace = true }
time-tz      = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
serde_json   = { workspace = true }
time         = { workspace = true }
