[package]
name         = "redispatch-xml"
version.workspace     = true
description  = "Redispatch 2.0 XML/XSD format parsing and validation for the German electricity grid (CIM/ENTSO-E-based, per BDEW specifications)"
authors.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
keywords     = ["redispatch", "xml", "xsd", "energy", "bdew"]
categories   = ["encoding", "data-structures"]

[dependencies]
quick-xml   = { version = "0.40", features = ["serialize"] }
serde       = { workspace = true }
thiserror   = { workspace = true }
time        = { workspace = true }

[features]
# Embeds all XSD schemas as static bytes; exposes `schema_bytes(DocumentType)` for
# downstream tooling. Does NOT perform runtime XSD validation.
bundled-schemas = []
